# libxtabml

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  debug_parser.rs
examples/: basic.rs  texttables.rs
resources/: example.xte
src/: lib.rs  parser.rs  types.rs
tests/: debug_parser.rs  error_handling.rs  integration_tests.rs  parsing_methods.rs  validation_tests.rs
