[package]
name = "libxtabml"
version = "0.1.0"
edition = "2021"
authors = ["Miles"]

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "basic"
path = "examples/basic.rs"

